--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "apexcharts": "^3.45.2",
+    "chart.js": "^4.4.1",
+    "ng-apexcharts": "^1.8.0",
+    "ng2-charts": "^5.0.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.4",
     "tslib": "^2.3.0",
